# rubber-duck-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  test_server.py
.cursor/: mcp.json
src/: __init__.py  main.py  server.py
src/tools/: __init__.py  rubber_duck.py
tests/: test_rubber_duck.py
