[project]
name = "rubber-duck-mcp"
version = "0.1.0"
description = "A rubber duck MCP server"
authors = [
    {name = "Francois-Joseph (FJ) Lacroix"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastmcp (>=0.4.1,<0.5.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
